feat: add tabs for task1

--- a/task-one/index.html
+++ b/task-one/index.html
@@ -6,5 +6,45 @@
     <link rel="stylesheet" href="style.css" />
     <title>Task One</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="tabs">
+        <input class="tabs__hidden-input" type="radio" name="tab" id="tab1" />
+        <label for="tab1" class="tabs__label">Tab 1</label>
+        <div class="tabs__content">
+          <h3 class="tabs__title">Title 1</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab soluta
+            nemo perferendis eaque quas incidunt corporis nihil, laudantium
+            minus magni est suscipit exercitationem reiciendis aliquam
+            recusandae consequatur aperiam qui obcaecati.
+          </p>
+        </div>
+
+        <input class="tabs__hidden-input" type="radio" name="tab" id="tab2" />
+        <label for="tab2" class="tabs__label">Tab 2</label>
+        <div class="tabs__content">
+          <h3 class="tabs__title">Title 2</h3>
+          <p>
+            L o r e m ipsum dolor, sit amet consectetur adipisicing elit. Ab
+            soluta nemo perferendis eaque quas incidunt corporis nihil,
+            laudantium minus magni est suscipit exercitationem reiciendis
+            aliquam recusandae consequatur aperiam qui obcaecati.
+          </p>
+        </div>
+
+        <input class="tabs__hidden-input" type="radio" name="tab" id="tab3" />
+        <label for="tab3" class="tabs__label">Tab 3</label>
+        <div class="tabs__content">
+          <h3 class="tabs__title">Title 3</h3>
+          <p>
+            L-o-r-e-m ipsum dolor, sit amet consectetur adipisicing elit. Ab
+            soluta nemo perferendis eaque quas incidunt corporis nihil,
+            laudantium minus magni est suscipit exercitationem reiciendis
+            aliquam recusandae consequatur aperiam qui obcaecati.
+          </p>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
